# metaai-api

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  pyproject.toml  requirements.txt
src/metaai_api/: api_server.py  database.py  generation.py  main.py
src/metaai_api/static/: index.html  login.html
