[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "metaai-sdk"
dynamic = ["version"]
description = "Feature-rich Python SDK for Meta AI - Chat, Image & Video Generation powered by Llama 3"
authors = [{name = "Ashiq Hussain Mir", email = "imseldrith@gmail.com"}]
readme = "README.md"
license = "MIT"
keywords = ["metaai", "meta-ai", "llama3", "ai", "llm", "video-generation", "chatbot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.31.0",
    "requests-html>=0.10.0",
    "lxml-html-clean>=0.1.1",
    "beautifulsoup4>=4.9.0",
    "python-multipart>=0.0.21",
]

[project.urls]
Homepage = "https://github.com/mir-ashiq/metaai-api"
Documentation = "https://github.com/mir-ashiq/metaai-api/blob/main/README.md"
Repository = "https://github.com/mir-ashiq/metaai-api"
Changelog = "https://github.com/mir-ashiq/metaai-api/blob/main/CHANGELOG.md"

[project.optional-dependencies]
api = [
    "fastapi>=0.95.2",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]
dev = [
    "check-manifest",
    "pytest",
    "black",
    "flake8",
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"